--- a/.github/workflows/sync_to_huggingface_hub.yaml
+++ b/.github/workflows/sync_to_huggingface_hub.yaml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://unnatiag:$HF_TOKEN@huggingface.co/spaces/unnatiag/K-drama-Companion main
+        run: git push --force https://unnatiag:$HF_TOKEN@huggingface.co/spaces/unnatiag/K-drama-Companion main
